--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "weather-app",
+  "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon src/server.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
@@ -17,6 +18,6 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.5",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.9"
   }
 }
